--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>New Tab</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="script.js"></script>
+    <script src="content.js"></script>
   </head>
   <body>
     <!-- Content for the new tab goes here -->
