--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>New Tab</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" href="icons/icon48.png" type="image/x-icon" />
     <script src="content.js"></script>
   </head>
   <body>
